Set the DATABASE_HOST for github workflow

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -3,6 +3,7 @@ env:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_DB: postgres
+  DATABASE_HOST: localhost
 
 name: RSpec
 on: [push,pull_request]
