--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
+  host: <%= ENV["DATABASE_HOST"] || 'db' %>
   username: postgres
   password: <%= ENV["PGPASSWORD"] %>
   pool: 5
