--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -1,7 +1,7 @@
 env:
   RUBY_VERSION: 3.0
   POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
+  PGPASSWORD: postgres
   POSTGRES_DB: postgres
   DATABASE_HOST: localhost
 
@@ -18,7 +18,7 @@ jobs:
         - 5432:5432
         env:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_PASSWORD: ${{ env.PGPASSWORD }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
