--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -34,5 +34,8 @@ jobs:
         run: |
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
+      - name: Compile webpack
+        run: |
+          bundle exec webpacker:compile RAILS_ENV=test
       - name: Run tests
         run: bundle exec rspec
