--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -35,8 +35,9 @@ jobs:
         run: |
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
-      - name: Compile webpack
+      - name: Compile assets, webpack
         run: |
+          bundle exec rails assets:precompile RAILS_ENV=test
           bundle exec rails webpacker:compile RAILS_ENV=test
       - name: Run tests
         run: bundle exec rspec
