--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     <<: *app
     command: ./bin/webpack-dev-server --inline true
     environment:
-      WEBPACKER_DEV_SERVER_HOST: localhost
+      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
       WEBPACKER_DEV_SERVER_PUBLIC: localhost:3035
     ports:
       - 3035:3035
